@@ -507,6 +507,15 @@
 #define DEFAULT_BG_REFRESH_INTERVAL 100000L
 
 /*
+ * Default interval (micro secs) to wait before fading colors due to a focus
+ * change. This is there mainly to work around bugs of some WM's which send
+ * numerous focus change events over a short event (e.g. when fvwm-2.5.16
+ * changes the miniicon of a window, it sends a FocusOut immediately followed by
+ * a FocusIn).
+ */
+#define DEFAULT_FOCUS_DELAY_INTERVAL 100000L
+
+/*
  * Provide termcap/terminfo bw support
  */
 /* #define TERMCAP_HAS_BW */
